# MaTouch_AMOLED_AI_CAMERA

./: README.md
Hardware/: MaTouch ESP32-S3 AMOLED AI CAMERA v1.1 Gerber.rar  MaTouch ESP32-S3 AMOLED AI CAMERA v1.1.brd  MaTouch ESP32-S3 AMOLED AI CAMERA v1.1.sch
example/Cat_face_detection/: .gitignore
example/Cat_face_detection/main/: CMakeLists.txt  idf_component.yml  main.c
example/Cat_face_detection/main/app/: ai_engine.cpp  ai_engine.h  camera_lcd_app.c  camera_lcd_app.h  detection_result.c  detection_result.h  font5x7.h
example/Cat_face_detection/main/drivers/: camera_driver.c  camera_driver.h  co5300_driver.c  co5300_driver.h
example/test/: camera_drv.cpp  camera_drv.h  display_drv.cpp  display_drv.h  pin_config.h  preview.cpp  preview.h  test.ino  touch_drv.cpp  touch_drv.h
